@@ -89,51 +89,51 @@
 
 (doom-modeline-def-modeline 'main
   '(eldoc bar workspace-name window-number modals matches follow buffer-info remote-host buffer-position word-count parrot selection-info)
-  '(compilation objed-state misc-info project-name persp-name battery grip irc mu4e gnus github debug repl lsp minor-modes input-method indent-info buffer-encoding major-mode process vcs check time))
+  '(compilation objed-state misc-info project-name persp-name battery grip irc mu4e gnus github debug repl lsp minor-modes input-method indent-info buffer-encoding process vcs check time major-mode))
 
 (doom-modeline-def-modeline 'minimal
   '(bar window-number modals matches buffer-info-simple)
-  '(media-info major-mode time))
+  '(media-info time major-mode))
 
 (doom-modeline-def-modeline 'special
   '(eldoc bar window-number modals matches buffer-info remote-host buffer-position word-count parrot selection-info)
-  '(compilation objed-state misc-info battery irc-buffers debug minor-modes input-method indent-info buffer-encoding major-mode process time))
+  '(compilation objed-state misc-info battery irc-buffers debug minor-modes input-method indent-info buffer-encoding process time major-mode))
 
 (doom-modeline-def-modeline 'project
   '(bar window-number modals buffer-default-directory remote-host buffer-position)
-  '(compilation misc-info battery irc mu4e gnus github debug minor-modes input-method major-mode process time))
+  '(compilation misc-info battery irc mu4e gnus github debug minor-modes input-method process time major-mode))
 
 (doom-modeline-def-modeline 'dashboard
   '(bar window-number modals buffer-default-directory-simple remote-host)
-  '(compilation misc-info battery irc mu4e gnus github debug minor-modes input-method major-mode process time))
+  '(compilation misc-info battery irc mu4e gnus github debug minor-modes input-method process time major-mode))
 
 (doom-modeline-def-modeline 'vcs
   '(bar window-number modals matches buffer-info remote-host buffer-position parrot selection-info)
-  '(compilation misc-info battery irc mu4e gnus github debug minor-modes buffer-encoding major-mode process time))
+  '(compilation misc-info battery irc mu4e gnus github debug minor-modes buffer-encoding process time major-mode))
 
 (doom-modeline-def-modeline 'package
   '(bar window-number modals package)
-  '(compilation misc-info major-mode process time))
+  '(compilation misc-info process time major-mode))
 
 (doom-modeline-def-modeline 'info
   '(bar window-number modals buffer-info info-nodes buffer-position parrot selection-info)
-  '(compilation misc-info buffer-encoding major-mode time))
+  '(compilation misc-info buffer-encoding time major-mode))
 
 (doom-modeline-def-modeline 'media
   '(bar window-number modals buffer-size buffer-info)
-  '(compilation misc-info media-info major-mode process vcs time))
+  '(compilation misc-info media-info process vcs time major-mode))
 
 (doom-modeline-def-modeline 'message
   '(eldoc bar window-number modals matches buffer-info-simple buffer-position word-count parrot selection-info)
-  '(compilation objed-state misc-info battery debug minor-modes input-method indent-info buffer-encoding major-mode time))
+  '(compilation objed-state misc-info battery debug minor-modes input-method indent-info buffer-encoding time major-mode))
 
 (doom-modeline-def-modeline 'pdf
   '(bar window-number modals matches buffer-info pdf-pages)
-  '(compilation misc-info major-mode process vcs time))
+  '(compilation misc-info process vcs time major-mode))
 
 (doom-modeline-def-modeline 'org-src
   '(eldoc bar window-number modals matches buffer-info buffer-position word-count parrot selection-info)
-  '(compilation objed-state misc-info debug lsp minor-modes input-method indent-info buffer-encoding major-mode process check time))
+  '(compilation objed-state misc-info debug lsp minor-modes input-method indent-info buffer-encoding process check time major-mode))
 
 (doom-modeline-def-modeline 'helm
   '(bar helm-buffer-id helm-number helm-follow helm-prefix-argument)
@@ -141,11 +141,11 @@
 
 (doom-modeline-def-modeline 'timemachine
   '(eldoc bar window-number modals matches git-timemachine buffer-position word-count parrot selection-info)
-  '(misc-info minor-modes indent-info buffer-encoding major-mode time))
+  '(misc-info indent-info buffer-encoding major-mode time minor-modes))
 
 (doom-modeline-def-modeline 'calculator
   '(window-number modals matches calc buffer-position)
-  '(misc-info minor-modes major-mode process))
+  '(misc-info minor-modes process major-mode))
 
 
 ;;
